[gd_scene load_steps=4 format=3 uid="uid://83pyael2vbx2"]

[ext_resource type="Script" uid="uid://1rhkben06vhg" path="res://scripts/win_screen.gd" id="1_uglf1"]

[sub_resource type="LabelSettings" id="LabelSettings_s508f"]
font_size = 45

[sub_resource type="LabelSettings" id="LabelSettings_wv5lq"]
font_size = 25

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uglf1")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 40.0
offset_right = 808.0
offset_bottom = 103.0
text = "You lost the game :("
label_settings = SubResource("LabelSettings_s508f")
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 120.0
offset_right = 808.0
offset_bottom = 160.0
text = "Your final score was %d points."
label_settings = SubResource("LabelSettings_wv5lq")
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="."]
layout_mode = 0
offset_left = 529.0
offset_top = 448.0
offset_right = 625.0
offset_bottom = 479.0
text = "Play again"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 496.0
offset_right = 624.0
offset_bottom = 527.0
text = "Main Menu"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 552.0
offset_top = 544.0
offset_right = 600.0
offset_bottom = 575.0
text = "Quit
"

[node name="ParagraphLabel" type="Label" parent="."]
offset_left = 344.0
offset_top = 160.0
offset_right = 808.0
offset_bottom = 200.0
text = "Score 100 points next time to win!"
horizontal_alignment = 1
